metadata-sfdx/force-app/main/default/objects/SCConfigDisputeOffer__c/SCConfigDisputeOffer__c.object-meta.xml
<CustomObject>
    <description>Custom Object for Solution Center to capture 'Resolution' related to a Dispute with information on Resolution Type, Status and other information</description>
    <label>Dispute Offer</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dispute Offers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>