metadata-sfdx/force-app/main/default/objects/SCConfigDisputeOffer__c/fields/Dispute__c.field-meta.xml
<CustomField>
    <fullName>Dispute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispute</label>
    <referenceTo>Dispute__c</referenceTo>
    <relationshipLabel>Dispute Offers</relationshipLabel>
    <relationshipName>DisputeOffers</relationshipName>
    <type>Lookup</type>
</CustomField>