metadata-sfdx/force-app/main/default/objects/SCConfigDisputeOffer__c/fields/InitiatingParty__c.field-meta.xml
<CustomField>
    <fullName>InitiatingParty__c</fullName>
    <label>Initiating Party Offer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiate</fullName>
            </value>
            <value>
                <fullName>Counter</fullName>
            </value>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>