metadata-sfdx/force-app/main/default/objects/SCConfigDisputeOffer__c/fields/OfferStatus__c.field-meta.xml
<CustomField>
    <fullName>OfferStatus__c</fullName>
    <label>Offer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed/Countered</fullName>
            </value>
            <value>
                <fullName>Closed/Accepted</fullName>
            </value>
            <value>
                <fullName>Closed/Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>