metadata-sfdx/force-app/main/default/objects/SCConfigDisputeOffer__c/fields/RefundAmount__c.field-meta.xml
<CustomField>
    <fullName>RefundAmount__c</fullName>
    <label>Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>