metadata-sfdx/force-app/main/default/objects/SCConfigDisputeOffer__c/fields/RespondingAccount__c.field-meta.xml
<CustomField>
    <fullName>RespondingAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The pro or customer that needs to respond to the dispute offer.</description>
    <label>Responding Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dispute Offers</relationshipLabel>
    <relationshipName>DisputeOffers</relationshipName>
    <type>Lookup</type>
</CustomField>