metadata-sfdx/force-app/main/default/objects/SCConfigDisputeOffer__c/fields/RespondingContact__c.field-meta.xml
<CustomField>
    <fullName>RespondingContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The pro or customer contact that is the responding party to the dispute offer.</description>
    <label>Responding Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Dispute Offers</relationshipLabel>
    <relationshipName>DisputeOffers</relationshipName>
    <type>Lookup</type>
</CustomField>