metadata-sfdx/force-app/main/default/objects/SCConfigDisputeOffer__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete the work</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Complete the work and refund</fullName>
            </value>
            <value>
                <fullName>Suggest a different completion date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>