metadata-sfdx/force-app/main/default/objects/SCConfigDisputeOffer__c/recordTypes/SolutionCenterOffer.recordType-meta.xml
<RecordType>
    <fullName>SolutionCenterOffer</fullName>
    <active>true</active>
    <description>Record type used to manage the offers or counter offers as part of the dispute resolution process.</description>
    <label>Solution Center Offer</label>
</RecordType>